--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ p {
 }
 
 img {
+    margin: 0 auto;
     display: block;
     width: 50%
 }
@@ -44,7 +45,7 @@ img {
     box-sizing: border-box;
     align-items: center;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     border: 7px black dotted
 }
 
@@ -64,7 +65,8 @@ img {
 
     #gallery {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        align-items: center;
         border: 10px black dotted
     }
 }
